some alignment fixes for the new username position

--- a/app/assets/stylesheets/desktop/topic.scss
+++ b/app/assets/stylesheets/desktop/topic.scss
@@ -1,6 +1,5 @@
 .post-info a {
   color: lighten($primary_text_color, 50%);
-  padding-right: 5px;
 }
 
 
